[project]
name = "comfyui_user_workspaces"
description = "Provides a structured model and helper nodes for organizing output files in ComfyUI."
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = ["python_path"]

[project.urls]
Repository = "https://github.com/wgedeon/comfyui_user_workspaces"

[tool.comfy]
PublisherId = "felleroftrees"
DisplayName = "ComfyUI Workspaces"
Icon = ""
